src/test/data/tests/pragma/invalid/invalid_escape_sequence.c
#pragma data 0x00 "\"

int main(void) {
    return 0;
}
